<resources>
    <string name="app_name">FoodPlanner</string>
    <string name="client_id">315159952979-c8s66tsnj1e3eoicci03j32c1n0gupja.apps.googleusercontent.com</string>

    <string name="facebook_app_id">1686966208525457</string>
    <string name="fb_login_protocol_scheme">fb1686966208525457</string>
    <string name="facebook_client_token">380703e24798ab4c078909990bca289f</string>

    <string name="the_kitchen">The Kitchen</string>
    <string name="skip">SKIP</string>
    <string name="cook_with_confidence">Cook with Confidence</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome back! You\'re just a tap away from something delicious.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="check">I would like to receive recipe inspiration, meal plans, updates, and more!</string>
    <string name="start_cooking">START COOKING!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_title">Save delicious recipes and get personalized content.</string>
    <string name="display_name">Display Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_check">I would like to receive recipe inspiration, meal plans, updates, and more!</string>
    <string name="next">NEXT</string>
    <string name="loading">Loading...</string>
    <string name="dummytext">DummyText</string>
    <string name="back_from_details_page">Back</string>
    <string name="meal_name_in_details_page">Beef Tenderloin with Teriyaki</string>
    <string name="meal_origin_in_details_page">Origin: Japan</string>
    <string name="ingredients_logo_in_details_page">Ingredients</string>
    <string name="steps_in_details_page">Steps</string>
    <string name="instructions_in_details_page">1. Preheat grill... \n2. Season beef... \n3. Grill until medium-rare...</string>
    <string name="add_to_plan_in_details_page">Add to Plan</string>
    <string name="add_to_favourites_in_details_page">Add to Favourites</string>
    <string name="type_meals_in_meals_page">Type Meals:</string>
    <string name="back_in_meals_page">Back</string>
    <string name="search_by_meal_in_meals_page">Search By Meal</string>
    <string name="welcome_in_home_page">Welcome Abdelaziz Maher</string>
    <string name="daily_inspiration_in_home_page">Daily Inspiration</string>
    <string name="recommended_for_you_in_home_page">Recommended for You</string>
    <string name="desserts_in_home_page">Desserts</string>
    <string name="your_favourite_meals_in_favourites_page">Your Favourite Meals:</string>
    <string name="your_week_plan_in_plan_page">Your Week Plan:</string>
    <string name="profile_in_profile_page">Abdelaziz Maher</string>
    <string name="my_food_preferences_in_profile_page">My Food Preferences</string>
    <string name="content_in_profile_page">Diet Preferences, Allergies, and Meal Plan settings.</string>
    <string name="navtodetails_in_profile_page">navToDetails</string>
    <string name="settings">settings</string>
    <string name="general_settings">General Settings</string>
    <string name="nav">nav</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_the_kitchen_in_profile_page">About The Kitchen</string>
    <string name="log_out">Log Out</string>
    <string name="google_button">google_button</string>
    <string name="facebook_button">facebook_button</string>
    <string name="welcome_in_search_page">Welcome Abdelaziz Maher</string>
    <string name="search">Search</string>
    <string name="ingredients">Ingredients</string>
    <string name="areas">Areas</string>
    <string name="categories">Categories</string>
    <string name="popular_meals">Popular Meals</string>
    <string name="meal_name">Meal Name</string>
    <string name="ingredient_info">120 mL</string>
    <string name="description">Teriyaki Sauce</string>
    <string name="add_to_favourites">ADD TO FAVOURITES</string>
    <string name="there_is_no_meals_yet">There is no meals yet,</string>
    <string name="your_meal_plan">Your Meal Plan</string>
    <string name="favourite_meals">Favourite Meals</string>
</resources>