<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="12dp"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/backToHome"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/arrowback"
        android:layout_marginBottom="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/profile_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/peridotlatin"
            android:text="@string/profile_in_profile_page"
            android:textColor="@color/primaryColor"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="88dp"
            tools:layout_editor_absoluteY="17dp" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#ffe5d4" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/rounded_bg"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:padding="16dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="64dp"
                android:src="@drawable/food"
                android:layout_marginEnd="8dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/peridotlatin"
                    android:text="@string/my_food_preferences_in_profile_page"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/primaryColor"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content_in_profile_page"
                    android:textSize="16sp"
                    android:textColor="#717880"
                    android:fontFamily="@font/peridotlatin"
                    android:textStyle="bold"
                    android:layout_marginTop="4dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_bg"
            android:padding="16dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="12dp"
                android:clickable="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/bookmark"
                    android:contentDescription="@string/settings"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/favourite_meals"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/favouritesNav"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/nav"
                    android:src="@drawable/arrow_forward"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="12dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="12dp"
                android:clickable="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/nav"
                    android:src="@drawable/shopping"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/your_meal_plan"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/planNav"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/nav"
                    android:src="@drawable/arrow_forward"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="12dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="12dp"
                android:clickable="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/info"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/about_the_kitchen_in_profile_page"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/aboutNav"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/nav"
                    android:src="@drawable/arrow_forward"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="12dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="12dp"
                android:clickable="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/logout"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/log_out"
                    android:textSize="24sp"
                    android:textColor="@color/black"/>

                <ImageView
                    android:id="@+id/logoutNav"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/nav"
                    android:src="@drawable/arrow_forward"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
