<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".allMeals.AllMealsFragment">

    <ImageView
        android:id="@+id/backToSearch"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="1dp"
        android:src="@drawable/arrowback"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/typeMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_meals_in_meals_page"
        android:textSize="28sp"
        android:textStyle="bold"
        android:fontFamily="@font/peridotlatin"
        android:textColor="@color/primaryColor"
        android:layout_marginTop="12dp"
        android:paddingBottom="8dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <ImageView
                android:id="@+id/ivBackArrow"
                android:layout_width="24dp"
                android:layout_height="26dp"
                android:src="@drawable/arrowback"
                android:visibility="gone"
                android:contentDescription="@string/back_in_meals_page"
                android:padding="4dp" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:queryHint="@string/search_by_meal_in_meals_page"
                android:iconifiedByDefault="false"
                android:background="@android:color/transparent"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMeals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_all_meals_custom"
        app:spanCount="1"/>

</LinearLayout>
