<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".home.view.HomeFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <LinearLayout
                android:id="@+id/topSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:elevation="20dp"
                android:layout_marginTop="16dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile"
                    android:layout_marginEnd="12dp"/>

                <TextView
                    android:id="@+id/welcomeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_in_home_page"
                    android:textSize="18sp"
                    android:textColor="@color/primaryColor"
                    android:fontFamily="@font/peridotlatin"/>

            </LinearLayout>

            <TextView
                android:id="@+id/titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_inspiration_in_home_page"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/primaryColor"
                android:layout_marginTop="10dp"/>

            <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
                android:id="@+id/carouselRecyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                tools:listitem="@layout/item_meal_custom" />

            <TextView
                android:id="@+id/firstRecyclerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommended_for_you_in_home_page"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/primaryColor"
                android:layout_marginTop="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_meal_small_custom"/>

            <TextView
                android:id="@+id/secondRecyclerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desserts_in_home_page"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/primaryColor"
                android:layout_marginTop="16dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/breakfastRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:overScrollMode="never"
                android:clipToPadding="false"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/item_meal_small_custom"/>

        </LinearLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/offline" />

</androidx.constraintlayout.widget.ConstraintLayout>
